# KTBot

./: .gitignore  Dockerfile  README.md  lidar_edited.py  lidar_with_vizualization.py  notes.txt  roscore.sh
XV_Lidar_Controller/: EEPROMAnything.h  XV_Lidar_Controller.ino
catkin_ws/config/: ktbot_bridge_params.yaml
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/experimental/sim/: ktbot.xml  package.xml  xv11.xml
catkin_ws/launch/: mqtt_bridge.launch
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/arb_description/: CMakeLists.txt  package.xml
catkin_ws/src/arb_description/config/: joints.yaml
catkin_ws/src/arb_description/launch/: arb.rviz  arb_gazebo.launch  arb_rviz.launch  ktbot.rviz
catkin_ws/src/arb_description/urdf/: arb.gazebo  arb.xacro
catkin_ws/src/arb_screw_detector/: pip-selfcheck.json
catkin_ws/src/arb_screw_detector/local/: bin  include  lib
catkin_ws/src/inserter_detector/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/inserter_detector/config/: joints.yaml
catkin_ws/src/inserter_detector/data/: bag_to_tf_example.py
catkin_ws/src/inserter_detector/docs/: README.md  research.md
catkin_ws/src/inserter_detector/launch/: gazebo.launch  gazebo_empty.launch  inserter_rviz.launch  realsense.rviz  rosconsole.conf  test_pose_detection.launch
catkin_ws/src/inserter_detector/msg/: CloudSegmentsStats.msg
catkin_ws/src/inserter_detector/simulation/: sim.world
catkin_ws/src/inserter_detector/src/: bag_to_tf_record  bag_to_tf_record.py  generate_training_data.cpp  inference_node  inserter_detector_node.cpp  node.cpp  pick_place_tutorial.cpp  simulate  stats_from_tf_record  test_pose_detection  train_pose_detection
catkin_ws/src/inserter_motion_planning/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/inserter_motion_planning/config/: fake_controllers.yaml  inserter.srdf  inserter.srdf.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
catkin_ws/src/inserter_motion_planning/include/: async_planning_context.h  dynamic_target.h  inserter_continuous_solver.h  multiarm_controller.h
catkin_ws/src/inserter_motion_planning/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_x4.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simulation_control.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_ws/src/kt_core/: CMakeLists.txt  ktbot.urdf  package.xml
catkin_ws/src/kt_core/config/: ktbot_bridge_params.yaml  ktbrain_bridge_params.yaml
catkin_ws/src/kt_core/config/sim/: xv11.xml
catkin_ws/src/kt_core/launch/: ktbot_core.launch  ktbrain_core.launch  stdr.launch
catkin_ws/src/kt_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/kt_gazebo/config/: joints.yaml
catkin_ws/src/kt_gazebo/launch/: kt_gazebo.launch  kt_gazebo.rviz  kt_gazebo_rviz.launch
catkin_ws/src/kt_gazebo/src/: kt_gazebo.xacro  ktbot.gazebo  materials.xacro  model.sdf
catkin_ws/src/kt_lidar/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/kt_lidar/src/: .driver.pyc.swp  node.py
catkin_ws/src/kt_wheel_controller/: CMakeLists.txt
catkin_ws/src/kt_wheel_controller/msg/: MotorStatus.msg
catkin_ws/src/kt_wheel_controller/src/: driver.py  node.py  sim.py
catkin_ws/src/ktbot/: CMakeLists.txt
catkin_ws/src/ktbot/kt_lidar/: CMakeLists.txt  package.xml
catkin_ws/src/ktbot/kt_lidar/src/: driver.py  node.py
catkin_ws/src/ktbot/kt_lidar/src/kt_lidar/: driver.py  node.py
catkin_ws/src/ktbot/kt_motor/: package.xml
catkin_ws/src/ktbot/kt_motor/src/kt_motor/: kt_driver.py
catkin_ws/src/ktbot/kt_wheel_controller/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/ktbot/kt_wheel_controller/src/: driver.py
catkin_ws/src/ktbot/sim/: stdr_server_ktbot.launch
catkin_ws/src/ktbot_control/config/: ktbot_controllers.yaml
catkin_ws/src/ktbot_control/launch/: ktbot_hardware.launch  ktbot_simulation.launch  ktbot_test_trajectory.launch  ktbot_visualize.launch
catkin_ws/src/ktbot_control/src/: ktbot_hw_interface.cpp  ktbot_hw_main.cpp
catkin_ws/src/ktbot_core/: CMakeLists.txt  package.xml
catkin_ws/src/ktbot_core/config/: costmap_common_params.yaml  global_costmap_params.yaml  ktbot_bridge_params.yaml  ktbrain_bridge_params.yaml  local_costmap_params.yaml
catkin_ws/src/ktbot_core/launch/: ktbot_core.launch  ktbrain_core.launch  ktbrain_mapping.launch  ktsim_core.launch
catkin_ws/src/ktbot_description/: CMakeLists.txt
catkin_ws/src/ktbot_description/config/: joints.yaml
catkin_ws/src/ktbot_description/launch/: ktbot_gazebo.launch  ktbot_rviz.launch
catkin_ws/src/ktbot_description/urdf/: kt_gazebo_gmapping_2018_02_24  ktbot.gazebo  ktbot.xacro
catkin_ws/src/ktbot_description/world/: ktbot_gazebo.world  ktbot_test1.world
catkin_ws/src/ktbot_lidar/: CMakeLists.txt
catkin_ws/src/lx16a_driver/: CMakeLists.txt
catkin_ws/src/lxarm_description/: CMakeLists.txt  package.xml
catkin_ws/src/lxarm_description/launch/: lx_arm.launch  lx_arm.rviz  lx_arm_rviz.launch
catkin_ws/src/lxarm_description/src/: lx_arm.gazebo  lx_arm.world  lx_arm.xacro
docker/: README.md  docker-compose.gpu.yml  docker-compose.yml  run.sh
docker/ktbot/: Dockerfile  build_container.sh
docker/ktbot/src/ktbot_control/: CMakeLists.txt  package.xml
docker/ktbot/src/ktbot_control/config/: ktbot_controllers.yaml
docker/ktbot/src/ktbot_control/launch/: ktbot_hardware.launch
docker/ktbot/src/ktbot_control/src/: discovery.cpp  ktbot_hw_interface.cpp  ktbot_hw_main.cpp
docker/ktbot/src/ktbot_description/: package.xml
docker/ktbot/src/ktbot_description/config/: ktbot_navigation.rviz
docker/ktbot/src/lx16a_driver/: CMakeLists.txt  package.xml  setup.py
docker/ktbot/src/lx16a_driver/include/lx16a_driver/: driver.h
docker/ktbot/src/lx16a_driver/src/: driver.cpp  driver.py  example.cpp  example.py  profiler.py  sim.py
gazebo/: model.config
(+84 files in other folders)
