<package>
  <name>arb_description</name>
  <version>0.0.1</version>
  <description>
    ARB (Autonomous Robotic Binner) gazebo files
  </description>
  <author>Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
