<package>
  <name>kt_lidar</name>
  <version>0.0.1</version>
  <description>
    Driver for neato XV11 lidar
  </description>
  <author>Katie Sharkey/Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-serial</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
