<?xml version="1.0"?>
<package format="2">
  <name>ktbot_core</name>
  <version>0.0.1</version>
  <description>KTBot core files</description>
  <author>Katie Sharkey/Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>ktbot_lidar</build_depend>
  <build_depend>ktbot_control</build_depend>
  <build_export_depend>ktbot_lidar</build_export_depend>
  <build_export_depend>ktbot_control</build_export_depend>
  <exec_depend>ktbot_lidar</exec_depend>
  <exec_depend>ktbot_control</exec_depend>
</package>
