<package>
  <name>lx_arm</name>
  <version>0.0.1</version>
  <description>
    LX-16A servo powered arm
  </description>
  <author>Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
