<package>
  <name>neato_driver</name>
  <version>0.2.0</version>
  <description>
    This is a driver for the KTBot
  </description>
  <author>Katie Sharkey/Scott Martin</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-serial</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
