<package>
  <name>ktbot_description</name>
  <version>0.0.1</version>
  <description>
    KT Bot gazebo files
  </description>
  <author>Katie Sharkey/Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
