<package>
  <name>lx16a_driver</name>
  <version>0.0.1</version>
  <description>
    Library code for LewanSoul LX-16A Servos
  </description>
  <author>Scott Martin</author>
  <maintainer email="smartin015@gmail.com">Scott Martin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
